--- a/style.css
+++ b/style.css
@@ -216,6 +216,7 @@ section{
 .sECTION_tEXT_p1{
     font-size: 3rem;
     font-weight: 700;
+    text-align: center;
 }
 .sECTION_tEXT_p2{
     font-size: 2rem;
